objects/Department_Revenue_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Costs__c</fullName>
        <label>Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>Monthly_Revenue_Schedule__r.Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Department Revenue Schedules</relationshipLabel>
        <relationshipName>Department_Revenue_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Import_Date__c</fullName>
        <label>Import Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue_Schedule__c</fullName>
        <label>Monthly Revenue Schedule</label>
        <referenceTo>Monthly_Revenue_Schedule__c</referenceTo>
        <relationshipLabel>Department Revenue Schedules</relationshipLabel>
        <relationshipName>Department_Revenue_Schedules</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Department Revenue Schedules</relationshipLabel>
        <relationshipName>Department_Revenue_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Department Revenue Schedule</label>
    <nameField>
        <displayFormat>DRS-{0}</displayFormat>
        <label>Department Revenue Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Department Revenue Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>